test/deca/syntax/invalid/ifthenelse_fin.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (; en trop après le crochet)

{
    if (true) {
        
    };
}